// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NoFailedInstancesCongrats with custom message renders 1`] = `
<div
  className="reportCongratsMessage"
>
  <div
    className="reportCongratsHead"
  >
    Congratulations!
  </div>
  <div
    className="reportCongratsInfo"
  >
    Look, ma! No bugs!
  </div>
  <InlineImage
    alt=""
    className="sleepingAda"
    imageType={6}
  />
</div>
`;

exports[`NoFailedInstancesCongrats with custom message renders 2`] = `
<div
  className="reportCongratsMessage"
>
  <div
    className="reportCongratsHead"
  >
    Congratulations!
  </div>
  <div
    className="reportCongratsInfo"
  >
    Look, ma! No bugs!
  </div>
  <InlineImage
    alt=""
    className="sleepingAda"
    imageType={6}
  />
</div>
`;

exports[`NoFailedInstancesCongrats with custom message renders 3`] = `
<div
  className="reportCongratsMessage"
>
  <div
    className="reportCongratsHead"
  >
    Congratulations!
  </div>
  <div
    className="reportCongratsInfo"
  >
    Look, ma! No bugs!
  </div>
  <InlineImage
    alt=""
    className="sleepingAda"
    imageType={6}
  />
</div>
`;

exports[`NoFailedInstancesCongrats with custom message renders 4`] = `
<div
  className="reportCongratsMessage"
>
  <div
    className="reportCongratsHead"
  >
    Congratulations!
  </div>
  <div
    className="reportCongratsInfo"
  >
    Look, ma! No bugs!
  </div>
  <InlineImage
    alt=""
    className="sleepingAda"
    imageType={6}
  />
</div>
`;

exports[`NoFailedInstancesCongrats with default message renders 1`] = `
<div
  className="reportCongratsMessage"
>
  <div
    className="reportCongratsHead"
  >
    Congratulations!
  </div>
  <div
    className="reportCongratsInfo"
  >
    No failed automated checks were found. Continue investigating your website's accessibility compliance through manual testing using Tab stops and Assessment in Accessibility Insights for Web.
  </div>
  <InlineImage
    alt=""
    className="sleepingAda"
    imageType={6}
  />
</div>
`;

exports[`NoFailedInstancesCongrats with default message renders 2`] = `
<div
  className="reportCongratsMessage"
>
  <div
    className="reportCongratsHead"
  >
    Congratulations!
  </div>
  <div
    className="reportCongratsInfo"
  >
    No failed automated checks were found. Continue investigating your website's accessibility compliance through manual testing using Tab stops and Assessment in Accessibility Insights for Web.
  </div>
  <InlineImage
    alt=""
    className="sleepingAda"
    imageType={6}
  />
</div>
`;

exports[`NoFailedInstancesCongrats with default message renders 3`] = `
<div
  className="reportCongratsMessage"
>
  <div
    className="reportCongratsHead"
  >
    Congratulations!
  </div>
  <div
    className="reportCongratsInfo"
  >
    No failed automated checks were found. Continue investigating your website's accessibility compliance through manual testing using Tab stops and Assessment in Accessibility Insights for Web.
  </div>
  <InlineImage
    alt=""
    className="sleepingAda"
    imageType={6}
  />
</div>
`;

exports[`NoFailedInstancesCongrats with default message renders 4`] = `
<div
  className="reportCongratsMessage"
>
  <div
    className="reportCongratsHead"
  >
    Congratulations!
  </div>
  <div
    className="reportCongratsInfo"
  >
    No instances to review were found. Continue investigating your website's accessibility compliance through manual testing using Tab stops and Assessment in Accessibility Insights for Web.
  </div>
  <InlineImage
    alt=""
    className="sleepingAda"
    imageType={6}
  />
</div>
`;
